--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=power
+APP_NAME=
 
-FIBER_PORT=3000
+FIBER_PORT=
 
-DATABASE_NAME=powerup
-DATABASE_PORT=5432
-DATABASE_HOST=localhost
-DATABASE_USER=postgres
-DATABASE_PASSWORD=postgres
+DB_NAME=
+DB_PORT=
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
